website.css
img {
  width: 55%;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

h1, h2 {
  font-family: 'Roboto Condensed', sans-serif;
  text-align: center;
  letter-spacing: -1px;
  font-weight: bold;
}

h3 {
  margin-top: 3%;
  margin-right: 1%;
  margin-left: 1%;
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: bold;
}

a {
  text-decoration: none;
  color: black;
}

#right {
  text-align: right;
  float: right;
}

